--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -71,25 +71,96 @@ from django.utils.translation import ugettext as _
 </div>
 
 <div class="wrapper-content wrapper">
-    <section class="content-area">
-        <article class="content-primary window">
-            <p class="unit-name-input"><label for="unit-display-name-input">${_("Display Name:")}</label><input type="text" value="${unit.display_name_with_default | h}" id="unit-display-name-input" class="unit-display-name-input" /></p>
-            <ol class="components">
-                % for locator in components:
-                <li class="component" data-locator="${locator}"/>
-                % endfor
-            </ol>
-        </article>
+    <div class="inner-wrapper">
+        <section class="content-area">
+            <article class="content-primary">
+                <section class="xblock-wrapper xblock-wrapper-pagelevel">
+                    <header class="xblock-header xblock-header-pagelevel">Page-Level Header</header>
+                    <article class="xblock-render xblock-render-pagelevel">
+                        <ol class="xblock-list xblock-nestinglevel-list">
+                            <li class="xblock-listitem xblock-listitem-nestinglevel">
+                                <section class="xblock-wrapper xblock-wrapper-nestinglevel">
+                                    <header class="xblock-header xblock-header-nestinglevel">Condition 1, for example. </header>
+                                    <article class="xblock-render xblock-render-nestinglevel">
+                                        <ol class="xblock-list xblock-elementlevel-list">
+                                            <li class="xblock-listitem xblock-listitem-elementlevel"</li>
+                                                <section class="xblock-wrapper xblock-wrapper-elementlevel">
+                                                    <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
+                                                    <article class="xblock-render xblock-render-elementlevel">Shows Element - Example Video could be here. </article>
+                                                </section>
+                                            <li class="xblock-listitem xblock-listitem-elementlevel"</li>
+                                                <section class="xblock-wrapper xblock-wrapper-elementlevel">
+                                                    <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
+                                                    <article class="xblock-render xblock-render-elementlevel">Shows Element - Example Text could be here.</article>
+                                                </section>
+                                            <li class="xblock-listitem xblock-listitem-elementlevel"</li>
+                                                <section class="xblock-wrapper xblock-wrapper-elementlevel">
+                                                    <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
+                                                    <article class="xblock-render xblock-render-elementlevel">Shows Element - Example HTML could be here.</article>
+                                                </section>
+                                            </li>
+                                        </ol>
+                                    </article>
+                                </section>
+                            </li>
+                            <li class="xblock-listitem xblock-listitem-nestinglevel">
+                                <section class="xblock-wrapper xblock-wrapper-nestinglevel">
+                                    <header class="xblock-header xblock-header-nestinglevel">Condition 2, for example.</header>
+                                    <article class="xblock-render xblock-render-nestinglevel">
+                                        <ol class="xblock-list xblock-elementlevel-list">
+                                            <li class="xblock-listitem xblock-listitem-elementlevel"</li>
+                                                <section class="xblock-wrapper xblock-wrapper-elementlevel">
+                                                    <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
+                                                    <article class="xblock-render xblock-render-elementlevel">Shows Element - Example Video could be here. </article>
+                                                </section>
+                                            <li class="xblock-listitem xblock-listitem-elementlevel"</li>
+                                                <section class="xblock-wrapper xblock-wrapper-elementlevel">
+                                                    <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
+                                                    <article class="xblock-render xblock-render-elementlevel">Shows Element - Example Text could be here.</article>
+                                                </section>
+                                            <li class="xblock-listitem xblock-listitem-elementlevel"</li>
+                                                <section class="xblock-wrapper xblock-wrapper-elementlevel">
+                                                    <header class="xblock-header xblock-header-elementlevel">Element Level Header</header>
+                                                    <article class="xblock-render xblock-render-elementlevel">Shows Element - Example HTML could be here.</article>
+                                                </section>
+                                            </li>
+                                        </ol>
+                                    </article>
+                                </section>
+                            </li>
+                        </ol>
+                    </article>
+                </section>
+            </article>
+            <aside class="content-supplementary" role="complimentary">
+                <div class="bit">
+                    <h3 class="title-3">${_("What can I do on this page?")}</h3>
+                    <ul class="list-details">
+                        <li class="item-detail">${_("Not much since this is read-only! TODO: need some real doc here...")}</li>
+                    </ul>
+                </div>
+            </aside>
+        </section>
+        <section class="content-area">
+            <article class="content-primary window">
+                <p class="unit-name-input"><label for="unit-display-name-input">${_("Display Name:")}</label><input type="text" value="${unit.display_name_with_default | h}" id="unit-display-name-input" class="unit-display-name-input" /></p>
+                <ol class="components">
+                    % for locator in components:
+                    <li class="component" data-locator="${locator}"/>
+                    % endfor
+                </ol>
+            </article>
 
-        <aside class="content-supplementary" role="complimentary">
-            <div class="bit">
-                <h3 class="title-3">${_("What can I do on this page?")}</h3>
-                <ul class="list-details">
-                    <li class="item-detail">${_("Not much since this is read-only! TODO: need some real doc here...")}</li>
-                </ul>
-            </div>
-        </aside>
-    </section>
+            <aside class="content-supplementary" role="complimentary">
+                <div class="bit">
+                    <h3 class="title-3">${_("What can I do on this page?")}</h3>
+                    <ul class="list-details">
+                        <li class="item-detail">${_("Not much since this is read-only! TODO: need some real doc here...")}</li>
+                    </ul>
+                </div>
+            </aside>
+        </section>
+    </div>
 </div>
 
 </%block>
