--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -1,15 +1,36 @@
 // xblocks - default styling
 // ==========================
-// The following is the default styling structure and base for xblocks, as an early draft, the element tags are left here in the styling but the production version will only have class labeling. 
+// The following is the default styling structure and base for xblocks. As an early draft, the element tags are left here in the styling but the production version we will only have class labeling.
+
 section.xblock-wrapper {
   border: 1px solid $gray-l4;
+  margin: $baseline/2;
+  border-radius: $baseline/5;
+  background: $white;
+  box-shadow: 0 1px 1px $shadow-l1;
 
   header.xblock-header {
     padding: $baseline/2;
     min-height: $baseline;
-    border-bottom: $gray-l4;
+    border-bottom: 1px solid $gray-l4;
     border-radius: $baseline/5;
+    border-radius: $baseline/5 $baseline/5 0 0;
     background-color: $gray-l6;
+
+    .header-details {
+      display: inline-block;
+      width: 60%;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .header-actions {
+      display: inline-block;
+      width: 38%;
+      text-align: right;
+    }
+
+
   }
 
   article.xblock-render {}
@@ -20,3 +41,71 @@ section.xblock-wrapper {
     margin-bottom: $baseline;
   }
 }
+
+// xblocks - general action list styles
+// uses similar styling block as _outline.scss, should be separated or more cleanly inherited (#TODO)
+.xblock-wrapper {
+
+  .actions-list {
+    display: inline-block;
+    margin-bottom: 0;
+  }
+
+  .actions-item {
+    @include font-size(13);
+    display: inline-block;
+    padding: 0 4px;
+    vertical-align: middle;
+
+    .action {
+      min-width: ($baseline*.75);
+      color: $gray-l2;
+
+      &:hover,
+      &.is-set {
+        color: $blue;
+        visibility: visible;
+      }
+
+      //reset old drag handle style
+      &.drag-handle {
+        float: none;
+        margin: 0;
+        background: transparent url(../img/drag-handles.png) right 5px no-repeat;
+        text-align: center;
+      }
+
+    }
+  }
+}
+
+// xblocks - specific action list styles
+// uses similar styling block as _outline.scss, should be separated or more cleanly inherited (#TODO)
+.xblock-wrapper {
+  .expand-collapse {
+    @include transition(all $tmg-f2 linear 0s);
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 ($baseline/4);
+    color: $gray-l2;
+
+    &:hover {
+      color: $blue;
+    }
+
+    .ui-toggle-expansion {
+      @include transition(all $tmg-f2 ease-in-out 0s);
+      @include font-size(18);
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: ($baseline/4);
+      color: $gray-l3;
+    }
+
+    &.expand .ui-toggle-expansion {
+      @include transform(rotate(-90deg));
+      @include transform-origin(50% 50%);
+    }
+  }
+}
+
